--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "buildCommand": "cd apps/web && npm run build",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "npm install",
-  "framework": "nextjs"
+  "installCommand": "npm install && cd apps/web && npm install",
+  "framework": "nextjs",
+  "rootDirectory": "apps/web"
 }
