✅ LOCAL SUCCESS: Authentication and API working
🎯 ACHIEVEMENTS:
- Fixed invalid Supabase API keys causing 401 errors
- Login working with admin@hethetrack.com credentials
- All API endpoints responding correctly (/api/data-sources, /api/tenements/stats)
- Local development fully functional at localhost:3000
- Removed debugging code and cleaned up auth implementation

🔧 NEXT: Configure Vercel deployment
- Set Root Directory to apps/web in Vercel Dashboard
- Update Vercel environment variables with correct Supabase keys
- Enable 'Include source files outside Root Directory' setting
- Test deployment after proper configuration

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,7 @@
     "@mining-hub/types": "*",
     "@mining-hub/ui": "*",
     "@nestjs/swagger": "11.2.4",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.38.0",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.41.0",
@@ -40,7 +39,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
+    "eslint": "^9.0.0",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.0",
