--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@turbo/gen": "^2.0.0",
+    "glob": "^10.5.0",
+    "rimraf": "^5.0.10",
     "turbo": "^2.0.0"
   },
   "packageManager": "npm@10.0.0",
