--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "clean": "turbo clean",
     "vercel-build": "npm run build:web"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "next": "14.2.35"
   },
