--- a/package.json
+++ b/package.json
@@ -1,32 +1,48 @@
 {
-  "name": "mining-hub",
+  "name": "@mining-hub/web",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "npm run build:web",
-    "build:web": "cd apps/web && npm run build",
-    "build:api": "cd apps/api && npm run build",
-    "dev": "turbo dev",
-    "start": "turbo start",
-    "lint": "turbo lint",
-    "test": "turbo test",
-    "clean": "turbo clean",
-    "vercel-build": "npm run build:web"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.2.35"
+    "@hookform/resolvers": "^3.3.1",
+    "@mining-hub/types": "*",
+    "@mining-hub/ui": "*",
+    "@nestjs/swagger": "11.2.4",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.38.0",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.41.0",
+    "@tanstack/react-table": "^8.9.3",
+    "@types/mapbox-gl": "^3.4.1",
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^2.30.0",
+    "lucide-react": "^0.263.1",
+    "mapbox-gl": "^2.15.0",
+    "next": "14.2.35",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.45.4",
+    "react-map-gl": "^7.1.7",
+    "recharts": "^2.8.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@turbo/gen": "^2.0.0",
-    "glob": "^10.5.0",
-    "rimraf": "^5.0.10",
-    "turbo": "^2.0.0"
-  },
-  "packageManager": "npm@10.0.0",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+    "@mining-hub/config": "*",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.1.1",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.1.6"
+  }
 }
