fix: Resolve deployment build issues
- Exclude NestJS API code from Next.js build to prevent decorator compilation errors
- Updated webpack config to externalize apps/api directory
- Updated TypeScript config to exclude apps/api from compilation
- Build now succeeds locally without NestJS decorator issues
- Ready for successful Vercel deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,8 @@
     "out/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "apps/api/**/*",
+    "apps/**/*"
   ]
 }
