fix: Remove conflicting Vercel configurations
- Simplified main vercel.json to standard Next.js configuration
- Removed problematic function runtime configuration causing deployment errors
- Removed duplicate vercel.json files in apps/web/ and vercel-config.json
- Updated build and install commands to work with root directory structure
- Should resolve 'Function Runtimes must have a valid version' error

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-  "buildCommand": "cd ../.. && npm run build:web",
-  "outputDirectory": ".next",
   "framework": "nextjs",
-  "installCommand": "cd ../.. && npm install",
-  "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
-    }
-  },
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/api/:path*",
