--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^4.41.0",
     "@tanstack/react-table": "^8.9.3",
     "@types/mapbox-gl": "^3.4.1",
+    "axios": "^1.13.2",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
